--- a/templates/upload.html
+++ b/templates/upload.html
@@ -37,10 +37,12 @@
 
         form input {
             position: absolute;
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
+            top: 50%;
+            left: 50%;
+            margin-top: -100px;
+            margin-left: -250px;
+            width: 500px;
+            height: 200px;
             outline: none;
             opacity: 0;
         }
